--- a/testdemo/test.css
+++ b/testdemo/test.css
@@ -2,3 +2,15 @@
     height: 20px;
     background: red;
 }
+
+
+td{
+    border: 2px solid;
+    font-size: 2rem;
+    font-family: "DejaVu Sans Mono";
+    text-align: center;
+}
+
+input{
+    display: block;
+}
